refactor(api): simplify DebtService expressions — getFirst() and boolean logic (KKS-085)